# Lesma

./: .gitignore  .releaserc  404.html  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  TODO.md  blog.html  index.html  markdown-page.html  opensearch.xml  run_compiler_tests.sh  search.html  setup-llvm.sh  sitemap.xml  vcpkg.json
.github/workflows/: ci.yaml  codeql-analysis.yml  deploy-docs-cloud-run.yaml  deploy-docs.yaml
assets/css/: styles.01b01c5f.css  styles.21ccacd9.css  styles.34840010.css  styles.46e83022.css  styles.4ed7f795.css  styles.55a5dfa6.css  styles.afec2cf8.css  styles.b74da50c.css  styles.b752e99c.css  styles.ba66e3ad.css
assets/js/: 01a85c17.047f5263.js  01a85c17.1cb7b394.js  01a85c17.1f7ebcc4.js  01a85c17.36a14cef.js  01a85c17.865da24e.js  031793e1.03bc01c5.js  031793e1.05302b6b.js  031793e1.b6616dc8.js  031793e1.f27395db.js  096bfee4.274dfcf1.js  096bfee4.af158d55.js  096bfee4.e5ece103.js  096bfee4.e836b548.js  0c8680ed.a5682c8b.js  0c8680ed.d36adcd0.js  0e758982.a284664d.js  0e758982.dbd5ecb1.js  1065.d129bb63.js  1134.f6419a02.js  1147.f11f0718.js  1156.1926f617.js  1259.480b72c4.js  13ed4b5d.05f93bee.js  13ed4b5d.0f7cba41.js  13ed4b5d.95fd1ae5.js  13ed4b5d.e87d4b57.js  1448.42ebb26a.js  1465.875a2cd3.js  1471.d95484c1.js  17896441.2384f318.js  17896441.8a3bdcd8.js  17896441.946ffb74.js  17896441.94fc9c8c.js  17896441.c220722c.js  17896441.f5fc4d9d.js  180.35a76f80.js  1886.ad90e83a.js  1960.896ec08d.js  1961.cf8a97d7.js  1a4e3797.13118c47.js  (+344 more)
benchmark/: benchmark.cpp
blog/: archive.html  atom.xml  first-blog-post.html  index.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
blog/archive/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: docusaurus.html  facebook.html  hello.html  hola.html  index.html
blog/tags/docusaurus/: index.html
blog/tags/facebook/: index.html
blog/tags/hello/: index.html
blog/tags/hola/: index.html
blog/welcome/: index.html
dev/bench/: data.js
docs/: .gitignore  Dockerfile  docusaurus.config.js  package.json  tsconfig.json
docs/basics/: comments.html  control_flow.html  functions.html  literals.html  types.html  variables.html
docs/common/: comments.html  control_flow.html  functions.html  literals.html  types.html  variables.html
docs/docs/basics/: control_flow.md  functions.md
docs/docs/common/: comments.md  literals.md  types.md  variables.md
docs/docs/expressions/: _category_.json  literals.md  variables.md
docs/docs/introduction/: getting-started.md  guessing-game.md  hello-world.md  what-is-lesma.md
docs/docs/modules/: _category_.json  overview.md
docs/docs/types/: overview.md  primitives.md
docs/expressions/: literals.html  variables.html
docs/introduction/: getting-started.html  guessing-game.html  hello-world.html  what-is-lesma.html
docs/introduction/getting-started/: index.html
docs/introduction/hello-world/: index.html
docs/introduction/what-is-lesma/: index.html
docs/modules/: overview.html
docs/src/components/Code/: index.js  index.tsx  (+1 more)
docs/src/config/: lesma.ts  provider.ts
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
docs/src/services/: api.ts  config.ts  snippets.json
docs/src/store/: actions.ts  configure.ts  dispatch.ts  reducers.ts  state.ts
docs/src/styles/: layout.ts
docs/src/theme/: Root.tsx
docs/src/utils/: headerutils.ts  theme.ts
docs/src/workers/: lesmaWorker.js  lesmaWorker.ts
docs/types/: primitives.html  types-overview.html
lib/: plf_nanotimer.h
markdown-page/: index.html
scripts/: get-lesma.sh  run_compiler_tests.sh  run_tests.sh  setup-llvm.sh
src/: LesmaJIT.h  main.cpp
src/AST/: AST.h  ExprVisitor.h  StmtVisitor.h
src/Backend/: Codegen.cpp  Codegen.h
src/Common/: LesmaError.h  Utils.cpp  Utils.h
src/Frontend/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h
src/Symbol/: SymbolTable.cpp  SymbolTable.h
src/Token/: Token.cpp  Token.h  TokenType.h
src/cli/: main.cpp
src/liblesma/AST/: AST.h  ASTVisitor.h  ExprVisitor.h  StmtVisitor.h
src/liblesma/Backend/: Codegen.cpp  Codegen.h  DebugInfo.cpp  DebugInfo.h
src/liblesma/Common/: LesmaError.h  LesmaVersion.h.in  Utils.cpp  Utils.h
src/liblesma/Diagnotic/: Diagnostic.h  DiagnosticManager.h
src/liblesma/Driver/: Driver.cpp  Driver.h
src/liblesma/Frontend/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h
src/liblesma/JIT/: LesmaJIT.h
src/liblesma/SourceManager/: SMLoc.h  SourceManager.cpp  SourceManager.h
src/liblesma/Support/: Diagnostic.h  DiagnosticManager.h  DiagnosticPrinter.h  ServiceLocator.cpp  ServiceLocator.h  SourceManager.cpp  SourceManager.h
src/liblesma/Symbol/: SymbolTable.cpp  SymbolTable.h  SymbolTableEntry.h  SymbolType.cpp  SymbolType.h  Type.cpp  Type.h  Value.h
src/liblesma/Token/: Token.cpp  Token.h  TokenType.h
src/std/: base.les  time.les
src/stdlib/: base.les  math.les  time.les
tests/: assignment.les  break.les  castop.les  continue.les  externfunctioncall.les  functioncall.les  ifelse.les  inference.les  test.cpp  vardecl.les  while.les
tests/lesma/: arithmetic.les  assignment.les  assignop.les  break.les  castop.les  class.les  continue.les  enum.les  enum_compare.les  extern_function_call.les  function_call.les  function_mangling.les  ifelse.les  import.les  import_alias.les  import_asterisk.les  import_std_in_scope.les  import_std_into_scope.les  inference.les  line_continuation.les  print_str.les  var_decl.les  vardecl.les  while.les
tests/lesma/failure/: enum_compare.les  let_reassign.les
tests/lesma/success/: arithmetic.les  assignment.les  assignop.les  break.les  castop.les  class.les  continue.les  enum.les  extern_function_call.les  function_call.les  function_default_value.les  function_mangling.les  function_recursive.les  ifelse.les  import.les  import_alias.les  import_asterisk.les  import_std_in_scope.les  inference.les  line_continuation.les  pointer.les  print.les  var_decl.les  while.les
(+22 files in other folders)
